# monad-logger-json-extra

./: README.md  monad-logger-json-extra.cabal  stack-lts-3.13.yaml  stack.yaml
src/Control/Monad/Logger/JSON/: Extra.hs
test/: Spec.hs
